--- a/package.json
+++ b/package.json
@@ -16,27 +16,49 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "body-parser": "^1.18.2",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.16.2",
     "ember-cli-app-version": "^3.0.0",
+    "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-display-revisions": "^1.0.0",
+    "ember-cli-deploy-gzip": "^1.0.1",
+    "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-s3": "^1.1.0",
+    "ember-cli-deploy-s3-index": "^1.0.0",
+    "ember-cli-dotenv": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^7.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-composability": "^0.3.8",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-material-lite": "^0.2.6",
+    "ember-new-computed": "^1.0.3",
+    "ember-paper": "^1.0.0-beta.3",
+    "ember-remarkable": "^3.6.1",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^1.4.0",
     "ember-source": "~2.16.0",
+    "ember-truth-helpers": "^1.2.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "express": "^4.8.5",
+    "glob": "^4.0.5",
+    "loader.js": "^4.2.3",
+    "morgan": "^1.3.2",
+    "torii": "^0.9.6"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
